# SHub

./: .gitignore  CMakeLists.txt  LICENSE  README.md
SHub/: CMakeLists.txt  SHub.cpp
SHub/scenes/: mainMenu.hpp
VSHub/: CMakeLists.txt  VSHub.cpp  winsettings.hpp
VSHub/scenes/: scene.hpp
include/: rect.hpp
include/glad/: gl.h
include/utils/: color.hpp  font.hpp  point.hpp  rect.hpp
lib/: freetype.lib  glfw3.lib
